Heartbeat and async http client.